--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div id="end-screen">
         <div class="content">
-            <h1>SCORE: <span id="score-endgame">0</span></h1>
+            <h1>FINAL SCORE: <span id="score-endgame">0</span></h1>
             <button type="button" id="restartButton">PLAY AGAIN</button>
         </div>
     </div>
